<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/detailsFragment"
        android:title="@string/details_fragment_lbl"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_view"
        />
    <item android:id="@+id/historyFragment"
        android:title="@string/history_fragment_lbl"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_chart"
        />

    <item android:id="@+id/monitorsFragment"
        android:title="@string/monitors_fragment_lbl"
        android:icon="@drawable/ic_monitors"
        app:showAsAction="ifRoom"
        />

    <!-- TODO
    <item android:id="@+id/devicesFragment"
        android:title="@string/devices_fragment_lbl"
        android:icon="@drawable/ic_devices"
        app:showAsAction="ifRoom"
        /> -->
</menu>